Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-99722

Time-series atomic bucket commit only catches DBExceptions

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2025-02-03

      When committing time-series buckets atomically (here and here), the logic is inside of a try/catch block so that upon an exception we can abort the batches with the proper error code. However, currently since we are not catching anything outside of DBException, if there is a different type of exception currently we will erroneously try to abort with an OK status.

            Assignee:
            gregory.noma@mongodb.com Gregory Noma
            Reporter:
            gregory.noma@mongodb.com Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: