SERVER-99722 Catch all exceptions during time-series atomic commit (#31461)

GitOrigin-RevId: 606d6444191db76fa5cfb9ab344b0733062e0b28